--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 						<input type="text" name="full-name" id="full_name"/>
 					</p>
 					<p>
-						<label for = "email" "/>Email<em>*</em></label>
+						<label for = "email"/>Email<em>*</em></label>
 						<input type="text" name="email" id="email"/>
 					</p>
 
-					<p>	<label for = "phone" "/>Phone<em>*</em></label> 
+					<p>	<label for = "phone"/>Phone<em>*</em></label> 
 						<input type ="text" name="phone"/>
 					</p>
 					<p>						
-						<label for = "current_email"/>Curret Company<em>*</em></label> 							<input type="text" name="current-company"/>
+						<label for = "current_email"/>Current Company<em>*</em></label> 							<input type="text" name="current-company"/>
 					</p>
 				</fieldset>
 
@@ -58,19 +58,18 @@
 						<label for="linkedin_url">Linkedin Url</label>
 						 <input type="text" name="linkedin-url" id="linkedin"/>
 					</p>
-
-					<p>Github URL 
+					<p>
 						<label for="github_url">Github Url</label>
 						<input type="text" name="github-url" id="url"/>
-
-
-					</p>			
-					<p>Portfolio URL <input type="text" name="portfolio-url"/></p>
+					</p>	
+					<p>
+						<label for="portfolio_url">Portfolio URL</label>
+						<input type="text" name="portfolio-url" id="portfolio"/></p>
 				</fieldset>
 
 				<fieldset>
 					<legend> ADDITIONAL INFORMATION</legend>
-					<textarea name="comments"> Add a coverletter or anything else you want to share. </textarea>
+					<textarea name="comments" class="comments"> Add a coverletter or anything else you want to share. </textarea>
 				</fieldset>
 			</form>
 		</section>
