--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
 		<section class="application-form">
 			<form class="container content-form">
+
 				<fieldset>
-					<legend>SUBMIT YOUR APPLICATION</legend>	
-	
+					<legend>SUBMIT YOUR APPLICATION</legend>
 					<p>
 						<label for="resume">Resume/CV</label>
-						<input type="text" name="resume" id="resume"/>
+						<button class="top-button">ATTACH RESUME/CV</button>
 					</p>
 					<p>
 						<label for="full_name">Full Name<em>*</em></label>
@@ -75,6 +75,9 @@
 					</textarea>
 				
 				</fieldset>
+				<fiedlset>					
+					 <button class= "bottom-button"> SUBMIT APPLICATION</button> 
+				</fieldset>
 			</form>
 		</section>
 	
@@ -88,10 +91,9 @@
 				<p class="footer-jobs-powered">
 					<a href= "https://lever.co"> Jobs powered by </a>
 				   	<a href= "https://lever.co"> <img src="lever-logo.png" class="lever-logo"/> </a>
-				</p>
-
+			</div>
 		</footer>
-		</div>
+
 	</body>
 </html>
 
