minor valdation changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!-- Begin Content Section -->
 		
-		<div clas="scroll">		
+		<div class="scroll">		
 		<header class="heading">
 			<div class="container">
 				<h2> Technical Recruiter</h2>
@@ -33,22 +33,22 @@
 					<legend>SUBMIT YOUR APPLICATION</legend>
 					<p>
 						<label for="resume">Resume/CV</label>
-						<button class="top-button">ATTACH RESUME/CV</button>
+						<button class="top-button" name="resume" id="resume">ATTACH RESUME/CV</button>
 					</p>
 					<p>
 						<label for="full_name">Full Name<em>*</em></label>
 						<input type="text" name="full-name" id="full_name"/>
 					</p>
 					<p>
-						<label for = "email"/>Email<em>*</em></label>
+						<label for = "email">Email<em>*</em></label>
 						<input type="text" name="email" id="email"/>
 					</p>
 
-					<p>	<label for = "phone"/>Phone<em>*</em></label> 
+					<p>	<label for = "phone">Phone<em>*</em></label> 
 						<input type ="text" name="phone" id="phone"/>
 					</p>
 					<p>						
-						<label for = "current_email"/>Current Company<em>*</em></label> 						<input type="text" name="current-company" id="current_company"/>
+						<label for = "current_email">Current Company<em>*</em></label> 						<input type="text" name="current-company" id="current_email"/>
 					</p>
 				</fieldset>
 
@@ -56,15 +56,15 @@
 					<legend>LINKS</legend>
 
 					<p>
-						<label for="linkedin_url">Linkedin Url</label>
+						<label for="linkedin">Linkedin Url</label>
 						 <input type="text" name="linkedin-url" id="linkedin"/>
 					</p>
 					<p>
-						<label for="github_url">Github Url</label>
-						<input type="text" name="github-url" id="url"/>
+						<label for="github">Github Url</label>
+						<input type="text" name="github-url" id="github"/>
 					</p>	
 					<p>
-						<label for="portfolio_url">Portfolio URL</label>
+						<label for="portfolio">Portfolio URL</label>
 						<input type="text" name="portfolio-url" id="portfolio"/></p>
 				</fieldset>
 
@@ -75,8 +75,12 @@
 					</textarea>
 				
 				</fieldset>
-				<fiedlset>					
-					 <button class= "bottom-button"> SUBMIT APPLICATION</button> 
+
+				<fieldset>
+					<p id="bottom_button">
+					 <button class="bottom-button"> SUBMIT APPLICATION</button> 
+					</p>					
+
 				</fieldset>
 			</form>
 		</section>
@@ -90,10 +94,12 @@
 				</p>
 				<p class="footer-jobs-powered">
 					<a href= "https://lever.co"> Jobs powered by </a>
-				   	<a href= "https://lever.co"> <img src="lever-logo.png" class="lever-logo"/> </a>
+				   	<a href= "https://lever.co" > <img src="lever-logo.png" class="lever-logo" 						   alt="imagine-of-lever-logo"/> 
+					</a>
 			</div>
+			
 		</footer>
-
+			</div>
 	</body>
 </html>
 
