fied button, footer and minor fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!-- Begin Content Section -->
 		
-		<div class="scroll">		
+	<div class="scroll">		
 		<header class="heading">
 			<div class="container">
 				<h2> Technical Recruiter</h2>
@@ -33,7 +33,7 @@
 					<legend>SUBMIT YOUR APPLICATION</legend>
 					<p>
 						<label for="resume">Resume/CV</label>
-						<button class="top-button" name="resume" id="resume">ATTACH RESUME/CV</button>
+						<button class="button" name="resume" id="top_button">ATTACH RESUME/CV</button>
 					</p>
 					<p>
 						<label for="full_name">Full Name<em>*</em></label>
@@ -76,10 +76,10 @@
 				
 				</fieldset>
 
-				<fieldset>
-					<p id="bottom_button">
-					 <button class="bottom-button"> SUBMIT APPLICATION</button> 
-					</p>					
+				<fieldset class="center">
+
+					 <button class= "button" id="bottom_button"> SUBMIT APPLICATION</button> 
+
 
 				</fieldset>
 			</form>
@@ -87,19 +87,21 @@
 	
 
 <!--Begin footer section-->
-		<footer class= "footer"> 
-			<div class="container">		
-				<p class="footer-tt-homepage">
+		<footer class= "footer "> 
+				<div class="footer-tt-homepage">
 					<a href= "https://tictail.com"> Tictail Home Page </a>
-				</p>
-				<p class="footer-jobs-powered">
+				</div>
+
+				<div class="footer-jobs-powered">
 					<a href= "https://lever.co"> Jobs powered by </a>
 				   	<a href= "https://lever.co" > <img src="lever-logo.png" class="lever-logo" 						   alt="imagine-of-lever-logo"/> 
 					</a>
-			</div>
+				</div>
+
 			
 		</footer>
-			</div>
+	</div>
 	</body>
 </html>
+
 
